--- a/productslist/app/views/host/admin/products/_form.html.erb
+++ b/productslist/app/views/host/admin/products/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@product) do |f| %>
+<%= form_for(:product, :url => host_admin_product_path(@product), :method => :put) do |f| %>
   <% if @product.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@product.errors.count, "error") %> prohibited this product from being saved:</h2>
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= f.label :sku_id %><br>
-    <%= f.text_field :sku_id %>
+    <%= @product.sku_id %>
   </div>
   <div class="field">
     <%= f.label :name %><br>
@@ -33,7 +33,7 @@
   </div>
   <div class="field">
     <%= f.label :images %><br>
-    <%= f.text_area :images %>
+    <%= image_tag(@product.first_image_url, :alt => t('common.not_set')) %>
   </div>
   <div class="field">
     <%= f.label :price %><br>
@@ -42,6 +42,10 @@
   <div class="field">
     <%= f.label :description %><br>
     <%= f.text_area :description %>
+  </div>
+  <div class="field">
+    <%= f.label :description %><br>
+    <%= f.check_box :admin_approved %>
   </div>
   <div class="actions">
     <%= f.submit %>
